<?xml version="1.0"?>
<package>
  <name>bulldog_driver</name>
  <version>2.0.0</version>
  <description>bulldog robot driver</description>

  <author email="956473807@qq.com">Shawn Ma</author>
  <maintainer email="956473807@qq.com">Shawn Ma</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bulldog_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export></export>
</package>
